[gd_scene load_steps=21 format=3 uid="uid://bgty0g4u5vpow"]

[ext_resource type="Script" path="res://player.gd" id="1_oqbyh"]
[ext_resource type="PackedScene" uid="uid://dhxgiti4485us" path="res://scenes/SIN.tscn" id="2_rrvcv"]
[ext_resource type="Texture2D" uid="uid://dalpole5wxuoc" path="res://assets/shadow.png" id="3_f0fnf"]
[ext_resource type="Material" uid="uid://cb3v5k0c5r8ui" path="res://shaders/OutlineMaterial.tres" id="3_okq8a"]
[ext_resource type="Script" path="res://scenes/player_cam.gd" id="5_6516o"]
[ext_resource type="AudioStream" uid="uid://beh567gfeucgt" path="res://audio/sfx/Footstep1_Void_SH.ogg" id="6_esds5"]
[ext_resource type="AudioStream" uid="uid://co667ppv3wfk4" path="res://audio/sfx/Footstep2_Void_SH.ogg" id="7_2hqgh"]
[ext_resource type="AudioStream" uid="uid://dmqjpmmrd04va" path="res://audio/sfx/Footstep3_Void_SH.ogg" id="8_xuwem"]
[ext_resource type="AudioStream" uid="uid://b3skolv0yb0oj" path="res://audio/sfx/Footstep1_Limbo_SH.ogg" id="9_fwaht"]
[ext_resource type="AudioStream" uid="uid://do1k7pskbsh2p" path="res://audio/sfx/Footstep2_Limbo_SH.ogg" id="10_s733k"]
[ext_resource type="AudioStream" uid="uid://bgys1nwamv0fc" path="res://audio/sfx/Footstep3_Limbo_SH.ogg" id="11_d2jiv"]

[sub_resource type="Curve" id="Curve_x36ei"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.78, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_fmyu2"]
curve = SubResource("Curve_x36ei")

[sub_resource type="Curve" id="Curve_h5vri"]
_data = [Vector2(0, 0.252747), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fpj4k"]
curve = SubResource("Curve_h5vri")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_te8cr"]
lifetime_randomness = 0.27
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 15.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
gravity = Vector3(0, -5, 0)
scale_min = 0.0
scale_max = 0.3
scale_curve = SubResource("CurveTexture_fpj4k")
alpha_curve = SubResource("CurveTexture_fmyu2")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fejgy"]
radius = 23.75
height = 47.5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_afkk7"]
radius = 28.75
height = 70.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hakps"]
streams_count = 3
stream_0/stream = ExtResource("6_esds5")
stream_1/stream = ExtResource("7_2hqgh")
stream_2/stream = ExtResource("8_xuwem")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8vwls"]
streams_count = 3
stream_0/stream = ExtResource("9_fwaht")
stream_1/stream = ExtResource("10_s733k")
stream_2/stream = ExtResource("11_d2jiv")

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(0.8, 0.8)
collision_mask = 3
script = ExtResource("1_oqbyh")

[node name="SIN" parent="." instance=ExtResource("2_rrvcv")]
unique_name_in_owner = true
material = ExtResource("3_okq8a")

[node name="DustParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
z_index = -5
position = Vector2(0, 53)
scale = Vector2(0.528164, 0.197754)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_te8cr")
texture = ExtResource("3_f0fnf")
lifetime = 0.6

[node name="Shadow" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 0.109804)
z_index = -6
position = Vector2(-5.96046e-08, 61)
scale = Vector2(0.528164, 0.197754)
texture = ExtResource("3_f0fnf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12.5)
shape = SubResource("CapsuleShape2D_fejgy")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.22
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
script = ExtResource("5_6516o")

[node name="PlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(0, 15)
shape = SubResource("CapsuleShape2D_afkk7")

[node name="VoidFootsteps" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_hakps")
bus = &"SFX"

[node name="LimboFootsteps" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_8vwls")
bus = &"SFX"

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="PlayerArea" to="." method="_on_player_area_area_entered"]
[connection signal="area_exited" from="PlayerArea" to="." method="_on_player_area_area_exited"]
